--- a/plugin.yml
+++ b/plugin.yml
@@ -3,3 +3,4 @@ version: 1.0
 api: 3.0.0
 main: Jibix\AntiInternalKick\Main
 author: "Jibix"
+description: 'A Plugin for PMMP to prevent players that they will kicked for "Internal server Error"'
