--- a/plugin.yml
+++ b/plugin.yml
@@ -1,6 +1,7 @@
 name: "AntiInternalKick"
 version: 1.0
 api: 3.0.0
+mcpe-protocol: 448
 main: Jibix\AntiInternalKick\Main
 author: "Jibix"
 description: 'A Plugin for PMMP to prevent players that they will kicked for "Internal server Error"'
